--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1 class = 'heading'> Edmond Karp Algo Visualization</h1>
+    <p class="My-text">The inspiration behind this page is the work of Jamie Heller's Edmonds-Karp Algorithm Visualizer
+        as seen on <a href="https://jamieheller.github.io/editor.html">https://jamieheller.github.io/editor.html</a></p>
+    
 
     <div id="displayTotalNodes"></div>
     <div class = 'button-container'>
