--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     
 
     <div id="displayTotalNodes"></div>
+
+    
     <div class = 'button-container'>
         <button class = 'Run btn-primary' id = 'Run-Algo'>Run Algorithm</button>
         <button class = 'btn-primary' id = 'toggle-move' style = 'margin-left: 10px;'>Toggle Move</button>
+        <button id = 'highlight-Next-Path' class = 'btn-primary' style = 'margin-left: 10px;'>Show Path</button>
 
     </div>
     <div class="svg-container">
