added extra pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="./Theory.html">Theory</a></li>
+            <li><a href="">References</a></li>
+            <li><a href="https://github.com/Reyan-786/Edmond-Karps-Algo-Visualization/tree/master">Code</a></li>
+            <li><a href="./About.html">About</a></li>
+        </ul>
+    </nav>
     <h1 class = 'heading'> Edmond Karp Algo Visualization</h1>
     <p class="My-text">The inspiration behind this page is the work of Jamie Heller's Edmonds-Karp Algorithm Visualizer
         as seen on <a href="https://jamieheller.github.io/editor.html">https://jamieheller.github.io/editor.html</a></p>
