Added the other pages

--- a/About.html
+++ b/About.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    This is the about page
+    <h1> Developed By -: Mohd Rehan (A.I Undergraduate)</h1>
+    <p class = 'box'>Mohd Rehan is currently a junior @ Z.H.C.E.T, Aligarh Muslim University, Aligarh. He is a Machine Learning & Deep Learning enthusiast with a strong passion for all computer science domains.</p>
+    <button back = 'back' class = 'btn btn-primary' onclick = 'GoToMain()'>Back</button>
+
+    <script >
+        function GoToMain() {
+            window.location.replace('index.html');
+        }
+    </script>
 </body>
 </html>
