--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithm Visualizer Using D3.js</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 
 </head>
@@ -12,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="./Theory.html">Theory</a></li>
-            <li><a href="">References</a></li>
+            <li><a href="References.html">References</a></li>
             <li><a href="https://github.com/Reyan-786/Edmond-Karps-Algo-Visualization/tree/master">Code</a></li>
             <li><a href="./About.html">About</a></li>
         </ul>
